[gd_scene load_steps=10 format=2]

[ext_resource path="res://Escenas/Menus/Toriko.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Escenas/Menus/MenuGameOver/MenuGameOver.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Menus/background_img_placeholder.jpeg" type="Texture" id=3]
[ext_resource path="res://Escenas/Menus/ButonBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/sfx/Sonido_Game_Over_V2.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=9]
size = 120
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Escenas/Menus/Monsters Attack! 1937.TTF"

[sub_resource type="DynamicFont" id=8]
resource_local_to_scene = true
size = 50
outline_size = 8
outline_color = Color( 0.705882, 0.333333, 0.176471, 1 )
extra_spacing_top = -15
font_data = SubResource( 7 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
menu_inicio = "res://Escenas/Menus/MenuInicio.tscn"
nivel_actual = "res://Escenas/Niveles/Nivel.tscn"

[node name="Fondo" type="TextureRect" parent="."]
modulate = Color( 0.482353, 0.482353, 0.482353, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Titulo" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -335.0
margin_top = -73.0
margin_right = 335.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 9 )
text = "Game Over"
align = 1
valign = 1

[node name="Texto" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -650.0
margin_top = -384.0
margin_right = 635.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Oh no!!!
No pudiste Superar Todas las Pruebas
para Convertirte en el Hechicero Supremo
Vuelve a Intentarlo!
"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = 10.0
margin_right = 332.0
margin_bottom = 437.0

[node name="Menu_Principal" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 0.0
margin_right = 664.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 8 )
text = "Reiniciar"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 664.0
margin_bottom = 142.0

[node name="Creditos" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 146.0
margin_right = 664.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 8 )
text = "Menu Principal"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 664.0
margin_bottom = 288.0

[node name="Salir" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 292.0
margin_right = 664.0
margin_bottom = 427.0
custom_fonts/font = SubResource( 8 )
text = "Salir"

[node name="MusicaGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -16.461
bus = "Musica"

[connection signal="pressed" from="VBoxContainer/Menu_Principal" to="." method="_on_Menu_Principal_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
